feat 🌻: add loading animation

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -42,7 +42,7 @@ const { title, icon } = Astro.props;
   }
 
   [data-description].online {
-    background-color: rgba(0, 255, 0, 0.358);
+    background-color: var(--primaryAccent);
   }
 
   [data-description].offline {
