--- a/src/components/StartButton.astro
+++ b/src/components/StartButton.astro
@@ -28,7 +28,7 @@ const initialStatus = 'loading';
   }
 
   .start-button.loading {
-    background-color: rgba(255, 165, 0, 0.8);
+    background-color: #747DE8;
   }
 
   .start-button.online {
